After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667632 - segfault in gtk_text_view_accessible_update_cursor after a buffer had two textviews and one of those is destroyed
segfault in gtk_text_view_accessible_update_cursor after a buffer had two tex...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkTextView
3.2.x
Other Linux
: Normal critical
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-01-10 15:38 UTC by Olivier Sessink
Modified: 2012-01-12 03:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backtrace (4.92 KB, text/plain)
2012-01-10 15:38 UTC, Olivier Sessink
Details

Description Olivier Sessink 2012-01-10 15:38:58 UTC
Created attachment 204949 [details]
backtrace

if a GtkTextBuffer has two GtkTextView's, and one of those is destroyed, the application segfaults.

<owen> mclasen: any clue why Oli747 has gail classes loaded without intentionally enabling a11y?
<mclasen> owen: I'll defer to Company for the detailed analysis, but generally, if you call gtk_widget_get_accessible you'll get a real accessible for your widget nowadays regardless if a11y is turned on or not
<mclasen> without looking at the stacktrace, it sounds like the a11y forgets to remove a signal handler when it gets nuked
 it calls update_cursor from a bunch of signal handlers
<mclasen> on the buffer
<mclasen> so if the buffer outlives the text view, there might be trouble
<owen> yeah, ok, I was trying to figure out how anything got disconencted in a11y/ but I guess most cases the connections are on the widget itself
<mclasen> yeah